--- a/web.css
+++ b/web.css
@@ -2,7 +2,7 @@
 	padding : 0;
 	margin : 0;
 }
-html { overflow:  hidden; }
+html {width: 100%; overflow:  hidden; }
 #canvas {
 	width: 100vw;
 	height: 100vh;
